@@ -176,6 +176,11 @@ publish_selected = function() {
   <td><input name="search_alt_tag" value="<tmpl_var escape=html search_alt_tag>"></td>
   </tr>
 
+  <tr>
+  <th><tmpl_lang Type></th>
+  <td><tmpl_var type_chooser></td>
+  </tr>
+
   </tbody>
 
   <tbody>
